--- a/TouchPortal Plugin Helper/TouchPortal Plugin Helper.csproj
+++ b/TouchPortal Plugin Helper/TouchPortal Plugin Helper.csproj
@@ -111,6 +111,9 @@
     <Compile Include="AddActionData.xaml.cs">
       <DependentUpon>AddActionData.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DefineValueChoices.xaml.cs">
+      <DependentUpon>DefineValueChoices.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Event_Editor.xaml.cs">
       <DependentUpon>Event_Editor.xaml</DependentUpon>
     </Compile>
@@ -134,6 +137,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="DefineCategories.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DefineValueChoices.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
